<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>CuteOverlay</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <!--
        <dependencyManagement>
            <dependencies>
                <dependency>
                    <groupId>io.vertx</groupId>
                    <artifactId>vertx-dependencies</artifactId>
                    <version>4.1.0</version>
                    <scope>import</scope>
                </dependency>
            </dependencies>
        </dependencyManagement>-->
    <dependencies>
        <!-- https://mvnrepository.com/artifact/io.netty/netty-tcnative-parent -->
        <!--   <dependency>
               <groupId>io.netty</groupId>
               <artifactId>netty-tcnative-parent</artifactId>
               <version>2.0.40.Final</version>
               <type>pom</type>
           </dependency>-->
        <!-- https://mvnrepository.com/artifact/io.netty/netty-tcnative-boringssl-static -->
        <!-- <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-tcnative-boringssl-static</artifactId>
             <version>2.0.40.Final</version>
         </dependency>-->
        <!--
                <dependency>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-tcnative-boringssl-static</artifactId>
                    <version>2.0.40.Final</version>
                    <scope>compile</scope>
                </dependency>-->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>15.0.1</version>
        </dependency>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-core</artifactId>
            <version>4.0.3</version>

        </dependency>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-web</artifactId>
            <version>4.0.3</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.12.3</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.12.3</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <configuration>
                    <mainClass>com.gnosis.cuteoverlay.Application</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <options>
                                <option>--add-opens java.base/jdk.internal.misc=ALL-UNNAMED --illegal-access=warn
                                </option>
                            </options>
                            <mainClass>com.gnosis.cuteoverlay.Application</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>1.0.2</version>
                <configuration>
                    <target>host</target>
                    <mainClass>com.gnosis.cuteoverlay.Application</mainClass>
                    <reflectionList>
                        <list>com.gnosis.cuteoverlay.Application</list>
                        <list>com.gnosis.cuteoverlay.DataToSend</list>
                        <list>com.gnosis.cuteoverlay.DataToSendContainer</list>
                    </reflectionList>
                    <graalvmHome>C:\dev\tools\graalvm-svm-windows-gluon-21.2.0-dev</graalvmHome>
                    <nativeImageArgs>
                        <imageArg>-Dio.netty.noUnsafe=true</imageArg>
                        <imageArg>--report-unsupported-elements-at-runtime</imageArg>
                        <imageArg>--allow-incomplete-classpath</imageArg>
                        <imageArg>--enable-all-security-services</imageArg>
                        <imageArg>--enable-url-protocols=https</imageArg>
                        <imageArg>-H:EnableURLProtocols=http</imageArg>
                        <imageArg>-H:TraceClassInitialization=true</imageArg>
                        <imageArg>
                            --initialize-at-build-time=org.slf4j.LoggerFactory,org.slf4j.impl.StaticLoggerBinder,io.netty,io.vertx,com.fasterxml.jackson
                        </imageArg>
                        <imageArg>
                            --initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger,ch.qos.logback.classic.Logger,io.netty.handler.ssl.OpenSslSessionContext,io.vertx.core.buffer.impl.VertxHeapByteBuf,io.netty.buffer.PooledByteBufAllocator,io.netty.handler.ssl.util.BouncyCastleSelfSignedCertGenerator,io.netty.handler.ssl.ReferenceCountedOpenSslClientContext,io.netty.handler.ssl.ReferenceCountedOpenSslServerContext,io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator,io.netty.handler.ssl.JdkAlpnApplicationProtocolNegotiator,io.netty.handler.ssl.util.ThreadLocalInsecureRandom,io.netty.handler.ssl.JettyNpnSslEngine,io.netty.handler.ssl.ReferenceCountedOpenSslEngine,io.netty.handler.ssl.ConscryptAlpnSslEngine,io.netty.handler.ssl.JettyAlpnSslEngine$ClientEngine,io.netty.handler.ssl.JettyAlpnSslEngine$ServerEngine,io.netty.util.internal.ObjectCleaner,io.netty.handler.ssl.util.InsecureTrustManagerFactory,io.netty.channel.DefaultChannelId,io.netty.util.NetUtil,io.netty.resolver.HostsFileEntriesResolver,io.netty.resolver.dns.DnsNameResolver,io.netty.resolver.dns.DnsServerAddressStreamProviders,io.netty.resolver.dns.PreferredAddressTypeComparator\$1,io.netty.resolver.dns.DefaultDnsServerAddressStreamProvider,io.netty.buffer.AbstractReferenceCountedByteBuf,io.vertx.core.net.impl.PartialPooledByteBufAllocator,io.netty.handler.codec.http.websocketx.extensions.compression.DeflateEncoder,io.netty.handler.codec.http.websocketx.extensions.compression.DeflateDecoder,io.netty.handler.codec.http.HttpObjectEncoder,io.netty.handler.codec.http.websocketx.WebSocket00FrameEncoder,io.netty.handler.codec.http2.Http2CodecUtil,io.netty.handler.codec.http2.Http2ConnectionHandler,io.netty.handler.codec.http2.DefaultHttp2FrameWriter,io.netty.handler.ssl.ReferenceCountedOpenSslServerContext,io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator,io.netty.handler.ssl.ReferenceCountedOpenSslEngine,io.netty.handler.ssl.ConscryptAlpnSslEngine,io.netty.handler.ssl.JettyNpnSslEngine,io.netty.handler.ssl.ReferenceCountedOpenSslContext,io.netty.handler.ssl.ReferenceCountedOpenSslClientContext,io.vertx.core.net.impl.transport.EpollTransport,io.vertx.core.net.impl.transport.KQueueTransport,io.vertx.core.http.impl.VertxHttp2ClientUpgradeCodec,io.vertx.core.eventbus.impl.clustered.ClusteredEventBus
                        </imageArg>
                    </nativeImageArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>